@@ -1,3 +1,8 @@
+2006-01-24 13:48 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridfacer.c (gridfacerCollapseEdge) refactored to only do
+	edges on face. warning O(nedges^2).
+
 2006-01-24 11:33 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmetric.c (gridEdgeRatio) report gridMap failure and
